--- a/chrome/browser.html
+++ b/chrome/browser.html
@@ -36,7 +36,7 @@
             <li><a rv-on-click="goSettings" href="#"><i class="fa fa-cog"></i> settings</a></li>
           </ul>
         </div><!-- .menu -->
-        <div id="encrypt-tab">
+        <article>
           <div rv-hide="alreadyEncrypted">
             <div>
               <div class="clear-text">
@@ -64,7 +64,7 @@
             <p>This message has already been encrypted.</p>
             <button rv-on-click="restoreMessage">Restore original message</button>
           </div><!-- alreadyEncrypted -->
-        </div><!-- #encrypted-tab -->
+        </article><!-- #encrypted-tab -->
       </div><!-- #main -->
     </div><!-- hasPrivateKey -->
 
