--- a/chrome/browser.html
+++ b/chrome/browser.html
@@ -29,13 +29,13 @@
       </div>
 
       <div id="main" rv-show="isDecrypted">
-        <div class="menu">
+        <nav>
           <div class="logo pull-left">b2b crypt</div>
           <ul id="tabs" class="pull-right">
             <li><a rv-on-click="lock" href="#"><i class="fa fa-lock"></i> lock</a></li>
             <li><a rv-on-click="goSettings" href="#"><i class="fa fa-cog"></i> settings</a></li>
           </ul>
-        </div><!-- .menu -->
+        </nav>
         <article>
           <div rv-hide="alreadyEncrypted">
             <div>
