--- a/chrome/browser.html
+++ b/chrome/browser.html
@@ -40,22 +40,20 @@
           <div rv-hide="alreadyEncrypted">
             <div>
               <div class="clear-text">
-                <label>Text</label>
+                <label>Text:</label>
                 <textarea rv-value="clearText"></textarea>
               </div>
               <div rv-show="clearText">
-                <div class="encrypt-for">
-                  <label for="filter">Encrypt for</label>
-                  <input rv-value="filter" rv-on-keyup="doFilter" placeholder="search address book">
-                </div>
+                <label for="filter">Recepients:</label>
+                <ul class="selected-keys" rv-on-click="focusFilter">
+                  <li class="bead" rv-each-key="selectedKeys"><div class="name">{ key.getPrimaryUser }</div><div class="remove" rv-on-click="removePublicKey"><i class="fa fa-times"></i></div></li>
+                  <li><input id="ftr" class="filter" rv-value="filter" rv-on-keyup="doFilter"></li>
+                </ul>
                 <ul class="found-keys" rv-show="hasFoundKeys < foundKeys">
                   <li rv-on-click="addPublicKey" rv-each-key="foundKeys"><span>{ key.getPrimaryUser }</span></li>
                 </ul>
                 <div class="bottom" rv-show="hasSelectedKeys < selectedKeys">
-                  <ul class="selected-keys">
-                    <li rv-each-key="selectedKeys"><div class="name">{ key.getPrimaryUser }</div><div class="remove" rv-on-click="removePublicKey"><i class="fa fa-times"></i></div></li>
-                  </ul>
-                  <button class="button" rv-on-click="sendMessage">generate link</button>
+                  <button class="button" rv-on-click="sendMessage">Encrypt Message</button>
                 </div>
               </div>
             </div>
