--- a/chrome/browser.html
+++ b/chrome/browser.html
@@ -56,7 +56,7 @@
               <span rv-show="clearText">
                 <button rv-show="hasSelectedKeys < selectedKeys" class="button" rv-on-click="sendMessage">Encrypt Message</button>
               </span>
-              <button rv-hide="clearText" rv-on-click="sendPublicKey" class="button">Send My Public Key</button>
+              <button rv-hide="clearText" rv-on-click="sendPublicKey" class="button">Share My Public Key</button>
             </div><!-- .bottom -->
           </div><!-- !alreadyEncrypted -->
           <div rv-show="alreadyEncrypted" class="middle">
