Begin admin reorg

--- a/chrome/browser.html
+++ b/chrome/browser.html
@@ -6,13 +6,11 @@
 
     <!-- Local CSS -->
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet/less" type="text/css" href="css/browser.less">
+    <link rel="stylesheet" type="text/css" href="css/browser.css">
 
     <!-- Vendors JS -->
-    <script src="./bower_components/sightglass/index.js"></script>
-    <script src="./bower_components/rivets/dist/rivets.js"></script>
+    <script src="./bower_components/rivets/dist/rivets.bundled.min.js"></script>
     <script src="./bower_components/openpgp/dist/openpgp.min.js"></script>
-    <script src="./bower_components/less/dist/less.js"></script>
 
     <!-- Code -->
     <script src="src/modules.js"></script>
