--- a/chrome/settings.html
+++ b/chrome/settings.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Pretty Good Plugin (Settings)</title>
+    <title>Short Link Privacy (Settings)</title>
 
     <!-- Vendors CSS -->
     <link rel="stylesheet" href="css/pure-min.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/slp.css">
 
     <!-- Local CSS -->
     <link rel="stylesheet/less" type="text/css" href="css/admin.less">
@@ -26,8 +26,8 @@
       <nav class="pure-menu pure-menu-horizontal">
           <span href="#" class="pure-menu-heading"><b>slp</b></span>
           <ul class="pure-menu-list">
-            <li class="pure-menu-item"><a href="#/key/view" class="pure-menu-link"><i class="fa fa-key"></i> My Key</a></li>
-            <li class="pure-menu-item"><a href="#/pub/list" class="pure-menu-link"><i class="fa fa-globe"></i> Address Book</a></li>
+            <li class="pure-menu-item"><a href="#/key/view" class="pure-menu-link"><i class="icon-key"></i> My Key</a></li>
+            <li class="pure-menu-item"><a href="#/pub/list" class="pure-menu-link"><i class="icon-address-book"></i> Address Book</a></li>
           </ul>
       </nav>
       <div id="notify" rv-on-click="notify.clear">
