--- a/chrome/browser.html
+++ b/chrome/browser.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Browser-2-Browser Crypt</title>
+    <title>Short Link Privacy</title>
 
     <!-- Local CSS -->
     <link rel="stylesheet" href="css/slp.css">
