--- a/chrome/settings.html
+++ b/chrome/settings.html
@@ -9,13 +9,12 @@
     <link rel="stylesheet" href="css/slp.css">
 
     <!-- Local CSS -->
-    <link rel="stylesheet/less" type="text/css" href="css/admin.less">
+    <link rel="stylesheet" type="text/css" href="css/admin.css">
 
     <!-- Vendors JS -->
     <script src="./bower_components/pathjs/path.min.js"></script>
     <script src="./bower_components/rivets/dist/rivets.bundled.min.js"></script>
     <script src="./bower_components/openpgp/dist/openpgp.min.js"></script>
-    <script src="./bower_components/less/dist/less.js"></script>
 
     <!-- Code -->
     <script src="src/modules.js"></script>
