--- a/chrome/browser.html
+++ b/chrome/browser.html
@@ -6,7 +6,7 @@
 
     <!-- Local CSS -->
     <link rel="stylesheet" href="css/slp.css">
-    <link rel="stylesheet" type="text/css" href="css/browser.css">
+    <link rel="stylesheet" href="css/browser.css">
 
     <!-- Vendors JS -->
     <script src="./bower_components/rivets/dist/rivets.bundled.min.js"></script>
@@ -21,8 +21,8 @@
     <nav>
       <div class="logo pull-left">short link pgp</div>
       <ul id="tabs" class="pull-right">
-        <li rv-show="isDecrypted"><a rv-on-click="lock" href="#"><i class="icon-lock"></i> lock</a></li>
-        <li><a rv-on-click="goSettings" href="#"><i class="icon-cog"></i> settings</a></li>
+        <li rv-show="isDecrypted"><a rv-on-click="lock" href="#"><i class="icon-lock"></i>lock</a></li>
+        <li><a rv-on-click="goSettings" href="#"><i class="icon-cog"></i>settings</a></li>
       </ul>
     </nav>
 
