Add iframe to playroom

--- a/play/index.html
+++ b/play/index.html
@@ -55,6 +55,14 @@
       </div>
 
       <div class="row">
+        <div class="col c4">
+          <iframe id="frame-a" width="400" height="250" src="iframe.html"></iframe>
+        </div>
+        <div class="col c8">
+        </div>
+      </div>
+
+      <div class="row">
         <div class="col c12">
           <div class="row">
             <span rv-on-click="deleteAll" class="link"> Delete All </span>
