--- a/play/index.html
+++ b/play/index.html
@@ -56,7 +56,7 @@
 
       <div class="row">
         <div class="col c4">
-          <iframe id="frame-a" width="400" height="250" src="iframe.html"></iframe>
+          <iframe width="400" height="250" src="iframe.html"></iframe>
         </div>
         <div class="col c8">
         </div>
