--- a/play/index.html
+++ b/play/index.html
@@ -67,6 +67,12 @@
           <div class="row">
             <span rv-on-click="deleteAll" class="link"> Delete All </span>
           </div>
+          <p>http://localhost:5000/x/56a57ac5c6b0a2b08a3ef91f</p>
+          <p><a href="http://localhost:5000/x/56a57ac5c6b0a2b08a3ef91f" target="_blank">http://localhost:5000/x/<wbr>56a57ac5c6b0a2b08a3ef91f</a></p>
+          <br>
+          <p>
+          http://localhost:5000/x/56a57ac5c6b0a2b08a3ef91f
+          </p>
           <p rv-each-item="items"> { item } </p>
         </div>
       </div>
