Change content script injection to idle (fix dynamic iframes)

--- a/play/index.html
+++ b/play/index.html
@@ -37,19 +37,13 @@
 
         <div class="col c3">
           <div class="row">
-            <div contenteditable="true" rv-textcontent="message3"></div>
-          </div>
-          <div class="row">
-            <button rv-on-click="submit3" class="btn btn-b btn-sm smooth"> Enter </button>
+            <div contenteditable="true"></div>
           </div>
         </div>
 
         <div class="col c3">
           <div class="row">
-            <div contenteditable="true" rv-textcontent="message4"></div>
-          </div>
-          <div class="row">
-            <button rv-on-click="submit4" class="btn btn-b btn-sm smooth"> Enter </button>
+            <div contenteditable="true"></div>
           </div>
         </div>
       </div>
@@ -64,15 +58,15 @@
 
       <div class="row">
         <div class="col c12">
+          <button rv-on-click="iframe" class="btn btn-a btn-sm smooth">iframe</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col c12">
           <div class="row">
             <span rv-on-click="deleteAll" class="link"> Delete All </span>
           </div>
-          <p>http://localhost:5000/x/56a57ac5c6b0a2b08a3ef91f</p>
-          <p><a href="http://localhost:5000/x/56a57ac5c6b0a2b08a3ef91f" target="_blank">http://localhost:5000/x/<wbr>56a57ac5c6b0a2b08a3ef91f</a></p>
-          <br>
-          <p>
-          http://localhost:5000/x/56a57ac5c6b0a2b08a3ef91f
-          </p>
           <p rv-each-item="items"> { item } </p>
         </div>
       </div>
