Begin settings tab

--- a/chrome/settings.html
+++ b/chrome/settings.html
@@ -27,6 +27,7 @@
           <ul class="pure-menu-list">
             <li class="pure-menu-item"><a href="#/key/view" class="pure-menu-link"><i class="icon-key"></i> My Key</a></li>
             <li class="pure-menu-item"><a href="#/pub/list" class="pure-menu-link"><i class="icon-address-book"></i> Address Book</a></li>
+            <li class="pure-menu-item"><a href="#/settings" class="pure-menu-link"><i class="icon-cog"></i> Settings</a></li>
           </ul>
       </nav>
       <div id="notify" rv-on-click="notify.clear">
