Public key view mod

--- a/chrome/browser.html
+++ b/chrome/browser.html
@@ -19,7 +19,7 @@
   <body>
     <div class="error" rv-if="error" rv-text="error"></div>
     <nav>
-      <div class="logo pull-left">short link pgp</div>
+      <div class="logo pull-left">short link privacy</div>
       <ul id="tabs" class="pull-right">
         <li rv-show="isDecrypted"><a rv-on-click="lock" href="#"><i class="icon-lock"></i>lock</a></li>
         <li><a rv-on-click="goSettings" href="#"><i class="icon-cog"></i>settings</a></li>
