--- a/chrome/browser.html
+++ b/chrome/browser.html
@@ -27,13 +27,13 @@
         </ul>
       </nav>
 
-      <div class="middle" rv-hide="hasPrivateKey">
+      <div class="middle short" rv-hide="hasPrivateKey">
         <p>You have not created or imported your PGP key yet.</p>
         <button class="button" rv-on-click="goSettings">Setup</button>
       </div><!-- !hasPrivateKey -->
 
       <div rv-show="hasPrivateKey">
-        <div class="middle" rv-hide="isDecrypted">
+        <div class="middle short" rv-hide="isDecrypted">
           <input id="pwd" rv-value="password" rv-on-keyup="enterPassword" type="password" placeholder="private key password">
         </div>
 
