Update unit tests

--- a/chrome/unittests.html
+++ b/chrome/unittests.html
@@ -9,15 +9,12 @@
     <div id="mocha"></div>
 
     <!-- Vendors JS -->
-    <script src="./bower_components/pathjs/path.min.js"></script>
-    <script src="./bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="./bower_components/rivets/dist/rivets.bundled.min.js"></script>
     <script src="./bower_components/openpgp/dist/openpgp.min.js"></script>
     <script src="./bower_components/mocha/mocha.js"></script>
     <script src="./bower_components/expect/index.js"></script>
 
     <!-- Code -->
-    <script src="src/admin.js"></script>
+    <script src="src/modules.js"></script>
 
     <!-- Tests -->
     <script src="unittests/lib/init.js"></script>
@@ -25,7 +22,9 @@
 
     <script src="unittests/keystore-localstore.js"></script>
     <script src="unittests/privatekey-localstore.js"></script>
+    <!--
     <script src="unittests/message-localstore.js"></script>
+    -->
 
     <script src="unittests/lib/run.js"></script>
   </body>
