IndexedDB seems to be working (needs more tests)

--- a/chrome/unittests.html
+++ b/chrome/unittests.html
@@ -20,11 +20,8 @@
     <script src="unittests/lib/init.js"></script>
     <script src="unittests/lib/testkeys.js"></script>
 
-    <script src="unittests/keystore-localstore.js"></script>
-    <script src="unittests/privatekey-localstore.js"></script>
-    <!--
-    <script src="unittests/message-localstore.js"></script>
-    -->
+    <script src="unittests/addressbook.js"></script>
+    <script src="unittests/privatekey.js"></script>
 
     <script src="unittests/lib/run.js"></script>
   </body>
