--- a/play/test.html
+++ b/play/test.html
@@ -23,21 +23,19 @@
             <p id="p2">http://slp.li/x/56b53ddee365a2380ca86cd1 two</p>
             <p id="p3">one http://slp.li/x/56b53ddee365a2380ca86cd1</p>
             <p id="p4">one http://slp.li/x/56b53ddee365a2380ca86cd1 two</p>
-            <h3>Multiple links in the same P</h3>
+            <h3>Multiple links in the same element</h3>
             <p id="p5">http://slp.li/x/56b53ddee365a2380ca86cd1 http://slp.li/x/56b53ddee365a2380ca86cd1</p>
+            <p id="p6">http://slp.li/x/56b53ddee365a2380ca86cd1|http://slp.li/x/56b53ddee365a2380ca86cd1</p>
             <h3>Connected text</h3>
             <p id="c1">fronthttp://slp.li/x/56b53ddee365a2380ca86cd1</p>
+            <p id="c2">http://slp.li/x/56b53ddee365a2380ca86cd1zzz</p>
             <h3>404</h3>
-            <p id="e1">
-              http://slp.li/x/56b53ddee365a2380ca86cd1back
-            </p>
-            <p id="e2">
-              http://slp.li/x/5681cab8da96b04654f50123
-            </p>
+            <p id="e1">http://slp.li/x/56b53ddee365a2380ca86cd1back</p>
+            <p id="e2">http://slp.li/x/5681cab8da96b04654f50123</p>
             <h3>Links</h3>
-            <p id="l1">
-              <a href="http://slp.li/x/56b53ddee365a2380ca86cd1">http://slp.li/x/56b53ddee365a2380ca86cd1</a>
-            </p>
+            <p id="l1"><a href="http://slp.li/x/56b53ddee365a2380ca86cd1">http://slp.li/x/56b53ddee365a2380ca86cd1</a></p>
+            <h3>Public Keys</h3>
+            <p id="pk1">http://slp.li/x/56b59cc6e365a2380ca86cd4</p>
           </div>
         </div>
 
